Fix overflow

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  overflow: hidden;
+  //overflow: hidden;
   display: flex;
   align-items: center;
   flex-direction: column;
