--- a/src/components/page chunks/Eng Consulting/style.scss
+++ b/src/components/page chunks/Eng Consulting/style.scss
@@ -59,7 +59,7 @@
 
   .get_contact_rower {
     position: relative;
-    width: 100%;
+    width: 98%;
     height: 25%;
     margin-top: 17rem;
     margin-left: 3rem;
